--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -9,3 +9,35 @@ html,body{
    height:100%;
    width:100%;
 }
+
+body {
+    background: url(/img/clock-bg.jpg) no-repeat center center fixed;
+}
+
+#header {
+    background-color: rgba(255, 255, 255, 0.35);
+}
+
+#app {
+    background-color: rgba(39,45,59,0.9);
+}
+
+#container {
+    padding-bottom: 60px;
+}
+
+footer {
+    background-color: rgba(39,45,59,0.95);
+    color: grey;
+    width:100%;
+    height:60px;
+    position:absolute;
+    bottom:0;
+    left:0;
+}
+
+#copyright {
+  width: 300px ;
+  margin-left: auto ;
+  margin-right: auto ;
+}
