--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -1,8 +1,12 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab);
+@import url(http://fonts.googleapis.com/css?family=Quattrocento+Sans);
+
 html,body{
     margin:0;
     padding:0;
     height:50%;
     width:100%;
+    font-family: 'Quattrocento Sans', sans-serif;
 }
 
 .app {
@@ -15,25 +19,54 @@ body {
 }
 
 #header {
-    background-color: rgba(255, 255, 255, 0.35);
+    background-color: rgba(255, 255, 255, 0.55);
 }
 
-#app {
-    background-color: rgba(39,45,59,0.9);
+#header > div {
+    padding-left: 2em;
+    padding-right: 1em;
+}
+
+#header > div >h1,h3 {
+    font-family: 'Roboto Slab', serif;
+    display: inline;
+}
+
+#header > div > h1 {
+    font-size: 4em;
+}
+
+#header > div > h3 {
+    font-size: 2em;
 }
 
 #container {
-    padding-bottom: 60px;
+    background-color: rgba(39,45,59,0.9);
 }
 
-footer {
+#login_box {
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+#marketing_bg {
+    background: url(/img/laptop.png) no-repeat;
+    height: 427px;
+}
+
+#marketing {
+    background-color: rgba(39,45,59,0.30);
+    padding: 10px;
+    font-size: 1.2em;
+    color: rgba(200,230,230,1);
+    margin-right: 25%;
+    height: 407px;
+    overflow: scroll;
+}
+
+#footer {
     background-color: rgba(39,45,59,0.95);
     color: grey;
-    width:100%;
-    height:60px;
-    position:absolute;
-    bottom:0;
-    left:0;
 }
 
 #copyright {
