--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -79,3 +79,7 @@ body {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
+
+.ui.form.info .info.message {
+  display: block;
+}
