--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -4,7 +4,8 @@
 html,body{
     margin:0;
     padding:0;
-    height:50%;
+    padding-left: 1em;
+    padding-right: 1em;
     width:100%;
     font-family: 'Quattrocento Sans', sans-serif;
 }
