Add expense display + loading from server
This change adds a table containing all of the expenses for the current
week, and with entries separated on days.

So far the date is pulled from a hard coded timestamp, the next step
will be to generate the timestamp for the current week.

--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -84,3 +84,9 @@ body {
 .ui.form.info .info.message {
   display: block;
 }
+
+.ui.table tbody tr.day {
+  background: #f0f0f0;
+  color: rgba(0, 0, 0, 0.8);
+
+}
