Make expenses deletable
This change adds a delete "button" to each expense allowing the expense
to be removed.

--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -88,5 +88,7 @@ body {
 .ui.table tbody tr.day {
   background: #f0f0f0;
   color: rgba(0, 0, 0, 0.8);
-
+}
+.ui.table tbody tr.day > td {
+    border-left: none;
 }
