Add print style
Add a print stylesheet and change a few attributes and classes in other
things to make it more style-able.

This change also has the day and total rows changing from <td>s to <th>s
and added screen styling around that.

--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -92,3 +92,34 @@ body {
 .ui.table tbody tr.day > td {
     border-left: none;
 }
+
+col.colTime {
+    width: 5%;
+}
+col.colAmount {
+    width: 5%;
+}
+col.colDescription {
+    width: 40%;
+}
+col.colComment {
+    width: 40%;
+}
+
+col.colAction{
+    width: 5%
+}
+
+tbody > tr > th {
+    cursor: auto;
+    background: #f0f0f0;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.8);
+    padding: 0.3em 0.8em;
+    vertical-align: middle;
+    font-style: none;
+    font-weight: bold;
+    text-transform: none;
+    border-bottom: 1px solid #d4d4d5;
+    border-left: none;
+}
