Add field validation
Add field validation, this will highlight things red when the values are
invalid. The invalid values will not be sent in updates, but other
fields can still be edited and updated.

--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -123,3 +123,9 @@ tbody > tr > th {
     border-bottom: 1px solid #d4d4d5;
     border-left: none;
 }
+
+
+td > textarea {
+    width: 100%;
+    height: 5em;
+}
