--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -129,3 +129,9 @@ td > textarea {
     width: 100%;
     height: 5em;
 }
+
+
+table ::selection {
+  background-color: rgba(100, 100, 60, 0.4);
+  color: rgba(0, 0, 0, 1);
+}
